tests/cases/variables/ok/array-fixed.ari
fn main() -> i64 {
  let values: [i64, 3] = [1, 2, 3];
  let flags: [bool, 2] = [false, true];
  if flags[1] {
    values[0] + values[2]
  } else {
    0
  }
}
