tests/cases/variables/errors/array-size-mismatch.ari
fn main() -> i64 {
  let values: [i64, 2] = [1, 2, 3];
  values[0]
}
